# copa

./: .gitignore  LICENSE  README.md  copa.zsh  pyproject.toml
.github/workflows/: ci.yml
copa/: __init__.py  __main__.py  cli.py  cli_common.py  cli_internal.py  cli_llm.py  cli_recipe.py  cli_share.py  config.py  copa.zsh  db.py  evolve.py  fzf.py  history.py  llm.py  mcp_server.py  models.py  scanner.py  scoring.py  sharing.py
demos/: 00-hero.tape  00-social.tape  01-setup.tape  02-inline-suggestions.tape  02a-suggestions-tab-mode1.tape  02b-suggestions-tab-mode2.tape  03-tab-menu-select.tape  04-ctrl-r-palette.tape  05-groups-and-scoping.tape  06-bulk-operations.tape  07-sharing.tape  08-composition.tape  09-flags-and-describe.tape  10-completion-modes.tape  11-workflow.tape  12-recipes.tape  Makefile  android.copa  k8s-staging.copa  my-project.copa  record-all.sh
examples/: adb.copa  aws.copa  curl-http.copa  deploy.copa  disk-files.copa  docker.copa  git.copa  homebrew.copa  k8s.copa  network.copa  npm.copa  process-monitoring.copa  python-dev.copa  ssh-remote.copa  sysadmin.copa  systemd.copa  terraform.copa  tmux.copa
tests/: conftest.py  test_cli_and_sharing.py  test_db.py  test_fzf.py  test_modal.py  test_models.py  test_polish.py  test_scanner.py
