[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "copa-cli"
version = "0.8.0"
description = "Command Palette — smart command tracking, ranking, and sharing for your shell"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Mark Stanford" },
]
keywords = ["cli", "command-palette", "shell", "fzf", "productivity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Shells",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
mcp = ["mcp"]
ollama = ["requests"]
dev = ["pytest", "ruff"]

[project.urls]
Homepage = "https://github.com/MaStanford/copa"
Repository = "https://github.com/MaStanford/copa"
Issues = "https://github.com/MaStanford/copa/issues"

[project.scripts]
copa = "copa.cli:cli"

[tool.setuptools.packages.find]
include = ["copa*"]

[tool.setuptools.package-data]
copa = ["copa.zsh"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
per-file-ignores = {"copa/cli.py" = ["E402"]}

[tool.pytest.ini_options]
testpaths = ["tests"]
